charts/mycarrier-helm/.debug/mycarrier-helm/templates/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-stack-test-app-backend
  namespace: dev
  labels:
    
    app.kubernetes.io/name: test-stack-test-app-backend
    app.kubernetes.io/instance: test-stack-test-app-backend-dev
    app.kubernetes.io/part-of: test-stack
    app.kubernetes.io/component: "test-app-backend"
    app: test-stack-test-app-backend
    mycarrier.tech/environment: dev
    mycarrier.tech/envscaling: "0"
    mycarrier.tech/envType: "standard"
    mycarrier.tech/service-namespace: dev
    mycarrier.tech/reference: ""
    mycarrier.tech/commitDeployed: ""
    version: 1.0.0
    mycarrier/service-version: 1.0.0
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,Prune=true
spec:
  replicas: 2
  revisionHistoryLimit: 2
  minReadySeconds: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: test-stack-test-app-backend
      app.kubernetes.io/instance: test-stack-test-app-backend-dev
  template:
    metadata:
      labels:
        
        app.kubernetes.io/name: test-stack-test-app-backend
        app.kubernetes.io/instance: test-stack-test-app-backend-dev
        app.kubernetes.io/part-of: test-stack
        app.kubernetes.io/component: "test-app-backend"
        app: test-stack-test-app-backend
        mycarrier.tech/environment: dev
        mycarrier.tech/envscaling: "0"
        mycarrier.tech/envType: "standard"
        mycarrier.tech/service-namespace: dev
        mycarrier.tech/reference: ""
        mycarrier.tech/commitDeployed: ""
        version: 1.0.0
        mycarrier/service-version: 1.0.0
        language: "csharp"
        
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.mycarrier.tech"
        vault.security.banzaicloud.io/mutate-probes: "true"
        vault.security.banzaicloud.io/vault-auth-method: azure
        vault.security.banzaicloud.io/vault-path: clusterauth
        vault.security.banzaicloud.io/vault-role: appcluster
        vault.security.banzaicloud.io/vault-env-daemon: "true"
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
        sidecar.istio.io/inject: 'true'
        
        
    spec:
      
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        runAsNonRoot: true
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      terminationGracePeriodSeconds: 10
      containers:
        - name: test-app-backend
          image: "myregistry.example.com/mycarrier/test-app:1.0.0"
          
          
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /liveness
              port: 8080
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: tmp-dir
              mountPath: /tmp
            
            - name: otel-log
              mountPath: /var/log/opentelemetry
        
      volumes:
        - name: tmp-dir
          emptyDir: {}
        - name: otel-log
          emptyDir: {}
      imagePullSecrets:
        - name: imagepull
---
